# PointCloudCurvCNC

./: .gitignore  AUTHORS  CMakeLists.txt  Common.h  CorrectedNormalCurrentFormulaEigen.h  Helpers.h  LICENCE  LinearKDTree.h  PointCloudCurvatureComputer.h  README.md  RegularPolyhedron.h  curvatures.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: config.cmake
cmake/recipes/: eigen-adobe.cmake  eigen.cmake  polyscope.cmake
data/anisotropic/: goursat-filter.pts  torus-filter.pts
data/goursat/: goursat_010000.pts  goursat_025000.pts  goursat_050000.pts  goursat_075000.pts
data/lidarSim/: goursat-lidar.pts  torus-lidar.pts
data/torus/: torus_010000.pts  torus_025000.pts  torus_050000.pts  torus_075000.pts
